# Qt-threads

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  threadworker.cpp  threadworker.h
